<resources>
    <string name="app_name">CloneFinder2000</string>
    <string name="percentage">%s%%</string>
    <string name="identifier">CC #%s</string>

    <!-- Projects -->
    <string name="projects_screen_name">Projects</string>
    <string name="projects_sloc">SLOC: %d</string>

    <!-- Project details -->
    <string name="project_details_sloc">Total SLOC:</string>
    <string name="project_details_summary_title">Summary</string>
    <string name="project_details_summary_type_1_title">Type 1</string>
    <string name="project_details_summary_type_2_title">Type 2</string>
    <string name="project_details_summary_type_3_title">Type 3</string>
    <string name="project_details_type_1">Type 1 clones:</string>
    <string name="project_details_type_2">Type 2 clones:</string>
    <string name="project_details_type_3">Type 3 clones:</string>
    <string name="project_details_clone_class_sloc">SLOC: %d</string>
    <string name="project_details_clone_class_percentage">%s%%/project</string>
    <string name="project_details_clone_classes">%s clone classes</string>
    <string name="project_details_clones">%s clones</string>

    <!-- Clone details-->
    <string name="clone_details_show_source_button">Show source</string>
    <string name="clone_details_hide_source_button">Hide source</string>
    <string name="clone_details_id">Identifier:</string>
    <string name="clone_details_class_parent">Parent clone class:</string>
    <string name="clone_details_sloc">SLOC:</string>
    <string name="clone_details_file_name">File:</string>
    <string name="clone_details_path">Path:</string>
    <string name="clone_details_start_line">Start line:</string>
    <string name="clone_details_end_line">End line:</string>
</resources>