<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/projectSummarySloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_default">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project_details_sloc" />

        <TextView
            android:id="@+id/projectSummarySlocText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="140000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/grey_90" />

    <LinearLayout
        android:id="@+id/projectSummaryType1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/spacing_default">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/project_details_type_1"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectSummaryType1DuplicatePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="10%/project" />

        <TextView
            android:id="@+id/projectSummaryType1CloneClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="100 clone classes" />

        <TextView
            android:id="@+id/projectSummaryType1Clones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="100 clones" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@drawable/divider" />

    <LinearLayout
        android:id="@+id/projectSummaryType2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/spacing_default">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/project_details_type_2"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectSummaryType2DuplicatePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="10%/project" />

        <TextView
            android:id="@+id/projectSummaryType2CloneClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="100 clone classes" />

        <TextView
            android:id="@+id/projectSummaryType2Clones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="100 clones" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@drawable/divider" />

    <LinearLayout
        android:id="@+id/projectSummaryType3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/spacing_default">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/project_details_type_3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectSummaryType3DuplicatePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="10%/project" />

        <TextView
            android:id="@+id/projectSummaryType3CloneClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="100 clone classes" />

        <TextView
            android:id="@+id/projectSummaryType3Clones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_micro"
            tools:text="100 clones" />
    </LinearLayout>
</LinearLayout>